# hardware-info-tool

./: README.md  main.py  pyproject.toml  requirements.txt  start.bat
hardware_info_tool/: __init__.py  cli.py  collectors.py  formatters.py  utils.py
tests/: test_cli.py
