[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-info-tool"
version = "0.1.0"
description = "Cross-platform CLI for collecting hardware and system information."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil",
    "py-cpuinfo",
]

[project.optional-dependencies]
gpu = ["GPUtil"]
windows = ["wmi"]
dev = ["pytest"]

[project.scripts]
hardware-info = "hardware_info_tool.cli:main"
